--- a/src/views/collections/framework-field-guide/segments/hero.module.scss
+++ b/src/views/collections/framework-field-guide/segments/hero.module.scss
@@ -11,11 +11,11 @@ body {
 	transition: transform 1ms;
 }
 
-.sunContainerContainer > div {
+.sunContainerContainer>div {
 	position: relative;
 }
 
-.sunContainerContainer > div > svg {
+.sunContainerContainer>div>svg {
 	position: absolute;
 	left: -30%;
 	top: -100px;
@@ -61,7 +61,7 @@ body {
 	padding: 1rem;
 }
 
-.sparkContainer > svg {
+.sparkContainer>svg {
 	height: 100%;
 	width: 100%;
 	fill: var(--outline) !important;
@@ -188,10 +188,8 @@ body {
 }
 
 .whyFreeBtn {
-	// Slate 50
-	background-color: rgb(246, 249, 254) !important;
-	// Slate 900
-	color: rgb(18, 25, 38) !important;
+	background-color: white;
+	color: var(--on-light-emphasis-high);
 	box-shadow:
 		0px 8px 8px 0px rgba(18, 25, 38, 0.08),
 		0px 16px 16px 0px rgba(18, 25, 38, 0.08),
@@ -199,11 +197,9 @@ body {
 }
 
 .whyFreeBtn:hover {
-	// Slate 200
-	background-color: rgb(217, 225, 242) !important;
+	background-color: var(--fund-100);
 }
 
 .whyFreeBtn:active {
-	// Slate 400
-	background-color: rgb(137, 155, 189) !important;
+	background-color: var(--fund-300);
 }
